fix layout on mobiles

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body{
     background-color: #dad7cd;
+    height:100vh;
 }
 
 .heading{
@@ -46,13 +47,17 @@ body{
     justify-content: space-around;
     align-items:center;
     height:20px;
-    font-size:20px;
+    font-size:1.3em;
 }
 
 .colour-picker input{
     padding:0;
     border:0;
-    width:80px;
+    width:40%;
+}
+
+.slider-control{
+    width:65%;
 }
 
 #rangeValue{
